# machine-interface-caltech

./: .gitignore  .gitmodules  CMakeLists.txt  Caltech-GUI.pro  LICENSE  README.md  addtraydialog.cpp  addtraydialog.h  addtraydialog.ui  calibration information.xlsx  calibrationdialog.cpp  calibrationdialog.h  calibrationdialog.ui  calibrationvalues.cpp  calibrationvalues.h  deviceManager.cpp  deviceManager.h  imagedialog.cpp  imagedialog.h  imagedialog.ui  machine-interface-caltech.kdev4  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  serialData.h  serialmanager.cpp  serialmanager.h  traysequenceitem.cpp  traysequenceitem.h  uint32spinbox.cpp  uint32spinbox.h  version_config.h.in
.kdev4/: machine-interface-caltech.kdev4
cmake/: DeployQt.cmake
